css/style.css
.nav
{
  float: right;
}

.nav .menu
{
  width: 100%;
  height: auto;
  text-align: right;
  /*box-shadow: 1px 2px 4px grey;*/
  background: rgba(0, 0, 0, 0.562);
  position: relative;
  z-index: 5;  
}
.menu li
{
  list-style-type: none;
  display: inline-block;
  padding: 10px;
  margin : 0px 10px;
  font-family: "Cookie";
  font-size: 4rem;
  color: white;  
}
.menu a 
{
  text-decoration: none;
  padding: 10px;
  cursor: pointer;
}
.menu a:link, a:visited 
{
  color: white;
}
.menu a:hover
{
  background: white;
  color: black;  
}
.burger
{
  display: none;
  cursor: pointer;
  position: absolute;
  z-index: 3;
}
.burger img
{
  width: 30px;
  height: 30px;
  margin: 5px;
  position: fixed;
  z-index: 3;
  right: 5px;
  top: 5px;
}

@media screen and (max-width:868px)
{
  body 
  {
    overflow-x: hidden;
  }
  .menu
  {
    position: absolute;
    right: 0px;
    height: 92vh;
    top: 50px;
    display: flex;
    flex-direction: column;
    transform: translate(100%);
    transition : transform 0.3s ease-in;
  }
  .burger
  {
    display: block;
  }

  .righthalf
  {
    width: 100%;
  }

  .lefthalf
  {
    width: 100%;
  }
}
.menu-active
{
  transform: translateX(0%);
}

.section 
{
  position: fixed;
  width: 100%;
  height: auto;
  display: flex;
  align-items: top;
  justify-content: left;
  overflow: hidden;
  z-index: 1;
}
.section h1 
{
  text-align: center;
  font-size: 4rem;
  font-family: "Cookie";
  margin: 5px;
  position: fixed;
  z-index: 5;
  color: white;
}

.blankr
{
  height: 20px !important;
  background-color: rgba(0, 0, 0, 0)

}
.blankc
{
  width: 20px !important;
  background-color: rgba(0, 0, 0, 0);
  display: none;
}
.right
{
  float: right;
}
table
{
  position: relative;
  font-size: 3rem;
  font-family: "Ubuntu";
  margin: 10px;
  z-index: 3;
  display: inline-block
}
table img
{
  width: 25px;
  height : auto;
  vertical-align: center;
  padding:10px 10px 0px 10px;
}
table, grey
{
  font-size: 3rem;
  font-weight: bold;
  color: grey;
}
table, cfb
{
  font-size: 2rem;
  font-weight: 100;
  color: cornflowerblue;
}
table, p10
{  
  font-size: 1.3rem;  
  font-weight: 100;
  color: white;
}
table, p10tab
{  
  font-size: 1.3rem;  
  font-weight: 100;
  color: white;  
}
table, p14
{
  font-size: 2rem;
  font-weight: 100;
  color: white;
}
table, p14b
{
  font-size: 2.5rem;
  font-weight: bold;
  color: white;
}
.lefthalf
{
  width: 50%;
  float: left;
}
.righthalf
{
  width: 50%;
  float: right;
}
.tophalf
{
  width: 100%;
  position: relative;
  display: flex;
}
.bothalf
{
  width: 100%;
  position: relative;
  display: flex;
}

hr { 
  display: block;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  margin-left: auto;
  margin-right: auto;
  border-style: inset;
  border-width: 1px;
  position: relative;
  color: red;
  z-index: 3;
}

.content
{
  position: absolute;
  z-index: 4;
  font-size: 3rem;
  font-family: "Cookie";
  margin: 75px;
  color: white;
}
.content a
{
  text-decoration: none;
  padding: 10px;
  cursor: pointer;
}
.content a:link, a:visited 
{
  color: white;
}
.content a:hover
{
  background: white;
  color: black;  
}

.video-container 
{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}
.video-container video
{
  min-width: 100%; 
  min-height: 100%; 
  
  width: auto;
  height: auto;
  
  /* Center the video
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);*/
}

.color-overlay 
{
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgba(255, 0, 0, 0);
  width: 100%;
  height: 100vh;
  opacity: 0.5;
}

.game img 
{
  width: 300px;
  height: auto;
  position: absolute;
  z-index: 5;  
}

body
{
  background-color: black
}

